--- a/404.html
+++ b/404.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 <div style = "max-width: 750px; margin: 0 auto">
-  <p style="font-size: 6rem; font-family: bold; margin: 0 ">404</p>
+  <p style="font-size: 6rem; font-family: bold; margin: 0">404</p>
   <h2>Сторінку не знайдено</h2>
-  <p>Можливо, Ви помилилися за адресою</p>
+  <p>Можливо, Ви помилилися адресою</p>
   <a class="button" href="/vine-calculator/">На головну</a>
 </div>
 </body>
+
 </html>
