--- a/404.html
+++ b/404.html
@@ -12,9 +12,11 @@
 <div style = "max-width: 750px; margin: 0 auto">
   <p style="font-size: 6rem; font-family: bold; margin: 0">404</p>
   <h2>Сторінку не знайдено</h2>
-  <p>Можливо, Ви помилилися адресою</p>
+  <p>Можливо ви помилилися адресою, але це легко виправити</p>
+  <p>Натискайте на блакитну кнопку, та повертайтеся до нас</p>
   <a class="button" href="/vine-calculator/">На головну</a>
 </div>
 </body>
 
 </html>
+
